--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-.App {
-  text-align: center;
-}
+@import './styles/custom-properties.css';
+@import './styles/custom-media.css';
+@import './styles/layout.css';
+@import './styles/shared.module.css';
+
 
 .App-logo {
   height: 40vmin;
@@ -14,14 +16,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--color-white);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--color-black);
 }
 
 .App-link {
