--- a/src/components/Training.module.css
+++ b/src/components/Training.module.css
@@ -1,40 +1,27 @@
 @import '../styles/custom-properties.css';
 @import '../styles/custom-media.css';
 
-.container {
-    width: var(--wide-container);
-    margin: 0 auto;
-    max-width: 100vw;
-    display: flex;
-}
 
-.topImage {
-    align-self: flex-start;
-    flex-basis: 20%;
-    padding: 2em;
-}
-.flexWrapper {
+
+.container {
+    width: var(--width-small);
+    margin: 0 auto;
+    max-width: 100%;
     display: flex;
-    flex-basis: 60%;
     flex-direction: column;
+    justify-content: center;
+
 }
-.flexWrapper > div {
-    padding-bottom: 2.5em;
+.topImage {
+    max-width: 100%;
+}
+.container  div {
+    padding-bottom: 0.5em;
+}
+.bottomImageHolder {
+    height: 200px;
+    align-self: center;
 }
 .bottomImage {
-    align-self: flex-end;
-    flex-basis: 20%;
-    padding: 2em;
-}
-
-@media (--media-max-large) {
-    .container {
-        flex-direction: column;
-        max-width: 90vw;
-        padding: 0 5%;
-    }
-    .topImage,
-    .bottomImage {
-        align-self: center;
-    }
+    height: 100%; 
 }
