--- a/src/styles/custom-properties.css
+++ b/src/styles/custom-properties.css
@@ -16,7 +16,7 @@
   --color-gray: #697a90;
   --color-light-gray: #b4bcc7;
   --color-very-light-gray: #e7ebed;
-  --color-white: #fdfdfd;
+  --color-white: #FDFDFD;
   --color-accent: #156dff;
   --delightful-neutral: #451F1E;
   --delightful-neutral-muted: #ECE8E8;
