--- a/src/Footer.module.css
+++ b/src/Footer.module.css
@@ -9,35 +9,8 @@
   text-align: center;
 }
 
-.items {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  margin: 0 0 1.5rem;
-  padding: 0;
-}
-
-.item {
-  @nest & > a {
-    display: block;
-    text-decoration: none;
-    color: inherit;
-    padding: 1.5rem 0.5rem;
-  }
-}
 
 .text {
   text-align: center;
-
-  @nest & p {
-    margin: 1rem 0;
-  }
-
-  @nest & a {
-    color: inherit;
-  }
-}
-
-@media (--media-max-medium) {
-  
+  padding-top: 30px;
 }
