--- a/src/components/Landing.module.css
+++ b/src/components/Landing.module.css
@@ -2,7 +2,13 @@
 @import "../styles/custom-properties.css";
 @import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
 
+.Landing {
+  /* background-image: url('../assets/blueEyedAussie.jpg'); */
+}
 .flexDiv {
+  background-image: url('../assets/blueEyedAussie.jpg');
+  background-repeat: no-repeat;
+  background-size: auto 100%;
   width: 100%;
   margin: 80px 0 0;
   display: flex;
@@ -10,9 +16,8 @@
   justify-content: space-between;
 }
 .img {
-  width: 40vw;
-  height: 26.7vw; /*original image proportions: 1 x 0.6676 */
-  align-self: flex-end;
+
+  display: none;
 }
 
 .heroContainer {
@@ -21,6 +26,7 @@
   padding: 40px;
   text-align: center;
   box-sizing: border-box;
+  border-radius: 14px 0 0 10px;
 }
 .h1 {
   font-size: calc(var(--font-title2-size) * 1.3);
@@ -59,15 +65,6 @@
   color: var(--color-white);
 }
 
-.h2Wrapper {
-  text-align: center;
-  padding: 0 3em;
-}
-.h2Middle {
-  color: var(--delightful-bright);
-  font-style: italic;
-  font-family: "Courgette", cursive;
-}
 
 @media screen and (max-width: 899px) {
   .h1 {
@@ -75,22 +72,27 @@
     line-height: var(--font-title3-line-height);
   }
   .button {
-    font-size: var(--font-large-size);
+    font-size: var(--font-base-size);
     line-height: var(--font-large-large-height);
+    padding: 14px 10px;
   }
 }
 
-@media screen and (max-width: 674px) {
+@media screen and (max-width: 767px) {
   .flexDiv {
     flex-direction: column;
     align-items: center;
+    background-size: 0% 0%;
   }
   .img {
     width: 100%;
     height: 66.76vw;
+    display: inherit;
   }
   .heroContainer {
     width: 100%;
+    border-radius: 0;
+
   }
   .h1 {
     font-size: var(--font-large-size);
