--- a/src/components/Trainers.module.css
+++ b/src/components/Trainers.module.css
@@ -120,3 +120,12 @@ button:hover {
     margin-left: inherit;
   }
 }
+.bottomImageHolder {
+  height: 200px;
+  width: 100%;
+  text-align: center;
+}
+.trainersBottomImage {
+  border-radius: 50%;
+  height: 100%; 
+}
