--- a/src/components/ContactUs.module.css
+++ b/src/components/ContactUs.module.css
@@ -1,144 +1,146 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
-
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .reachOut {
   width: 100%;
   height: auto;
 }
 #contactArea {
-    display: flex;
-    margin: 20px 10%;
-    box-sizing: border-box;
-    max-width: 100vw;
-  }
-  .h5,
-  .h3,
-  .p {
-    line-height: 1.2;
-    margin: 10px;
+  display: flex;
+  margin: 20px 10%;
+  box-sizing: border-box;
+  max-width: 100vw;
+}
+.h5,
+.h3,
+.p {
+  line-height: 1.2;
+  margin: 10px;
+}
+.address {
+  box-sizing: border-box;
+  width: 30%;
+  padding: 0 10px 0 0;
+  margin: 0;
+  text-align: left;
+}
+
+.href {
+  text-decoration: none;
+  color: var(--delightful-bright);
+}
+.href:hover {
+  color: var(--delightful-neutral);
+}
+
+.fieldset {
+  width: 70%;
+  margin: 0;
+  border-radius: 1em;
+  box-sizing: border-box;
+}
+.form {
+  text-align: left;
+  box-sizing: border-box;
+}
+.line {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5em 0;
+  box-sizing: border-box;
+}
+
+.input {
+  flex-basis: 45%;
+}
+.select,
+.input {
+  min-width: 12px;
+}
+.stZip {
+  flex-basis: 45%;
+  box-sizing: border-box;
+}
+#st {
+  float: left;
+  width: 40%;
+  margin: 0;
+  box-sizing: border-box;
+}
+#zip {
+  float: right;
+  width: 55%;
+  box-sizing: border-box;
+}
+
+.textarea:invalid {
+  box-shadow: none;
+}
+.textarea {
+  width: 100%;
+}
+
+.button {
+  background: var(--color-white);
+  border: 1px var(--color-very-light-gray) solid;
+  border-radius: 2px;
+  font-weight: bold;
+  font-size: 9pt;
+  outline: none;
+  text-transform: uppercase;
+  margin-top: 1em;
+  padding: 0.5rem 1rem;
+}
+
+.button:hover {
+  border: 1px #c6c6c6 solid;
+  box-shadow: 1px 1px 1px #eaeaea;
+  color: #333333;
+  background: #f7f7f7;
+}
+.bottomImageHolder {
+  height: 200px;
+  width: 100%;
+  text-align: center;
+}
+.contactBottomImage {
+  border-radius: 50%;
+  height: 100%; 
+}
+@media only screen and (max-width: 899px) {
+  #contactArea {
+    flex-direction: column;
+    width: 60%;
+    margin: 20px 20%;
   }
   .address {
-    box-sizing: border-box;
-    width: 30%;
-    padding: 0 10px 0 0;
-    margin: 0;
-    text-align: left;
+    width: auto;
+    margin-bottom: 40px;
   }
-
-  .href {
-    text-decoration: none;
-    color: var(--delightful-bright);
-  }
-  .href:hover {
-    color: var(--delightful-neutral);
-  }
-
   .fieldset {
-    width: 70%;
-    margin: 0;
-    border-radius: 1em;
-    box-sizing: border-box;
-  }
-  .form {
-    text-align: left;
-    box-sizing: border-box;
+    width: auto;
   }
   .line {
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5em 0;
-    box-sizing: border-box;
+    flex-direction: column;
+    margin: 0;
   }
-
- .input {
-    flex-basis:45%;
-  }
-  .select,
   .input {
-    min-width: 12px;
+    margin: 0.5em 0;
   }
-  .stZip {
-    flex-basis:45%;
-    box-sizing: border-box;
+  .div {
+    flex-direction: column;
+  }
+  .div > div {
+    flex-basis: 95%;
+    max-width: 96%;
   }
   #st {
-    float: left;
-    width: 40%;
-    margin: 0;
-    box-sizing: border-box;
-
+    margin: 0.5em 0;
   }
-  #zip {
-    float: right;
-    width: 55%;
-    box-sizing: border-box;
-
+}
+@media (--media-max-width-media) {
+  #contactArea {
+    width: 90%;
+    margin: 20px 5%;
   }
-
-  .textarea:invalid {
-    box-shadow: none;
-  }
-  .textarea {
-    width: 100%;
-  }
-  
-  .button {
-    background: var(--color-white);
-    border: 1px var(--color-very-light-gray) solid;
-    border-radius: 2px;
-    font-weight: bold;
-    font-size: 9pt;
-    outline: none;
-    text-transform: uppercase;
-    margin-top: 1em;
-    padding: .5rem 1rem;
-  }
-
-  .button:hover {
-    border: 1px #C6C6C6 solid;
-    box-shadow: 1px 1px 1px #EAEAEA;
-    color: #333333;
-    background: #F7F7F7;
-  }
-
-  @media only screen and (max-width: 899px) {
-    #contactArea {
-      flex-direction: column;
-      width: 60%;
-      margin: 20px 20%;
-    }
-    .address {
-      width: auto;
-      margin-bottom: 40px;
-    }
-    .fieldset{
-      width: auto;
-    }
-    .line {
-      flex-direction: column;
-      margin: 0;
-    }
-    .input {
-      margin: 0.5em 0;
-    }
-    .div {
-      flex-direction: column;
-    }
-    .div > div {
-      flex-basis: 95%;
-      max-width: 96%;
-
-    }
-    #st {
-      margin: 0.5em 0;
-    }
-  }
-    @media (--media-max-width-media) {
-      #contactArea {
-        width: 90%;
-        margin: 20px 5%;
-      }
-
-    }
-  
+}
