--- a/src/components/Trainers.module.css
+++ b/src/components/Trainers.module.css
@@ -1,5 +1,5 @@
-@import "../styles/custom-media.css";
-@import "../styles/custom-properties.css";
+@import '../styles/custom-media.css';
+@import '../styles/custom-properties.css';
 
 :root {
   --read-more-height: 400px;
@@ -10,12 +10,11 @@
   margin: 3rem 5rem;
   max-width: calc(100% - 10rem);
   padding-bottom: 1.4rem;
+  display: flex;
 }
-.picLeft > img {
-  float: left;
-}
-.picRight > img {
-  float: right;
+
+.picRight {
+  flex-direction: row-reverse;
 }
 .h2 {
   margin-top: 0;
@@ -104,7 +103,7 @@ button:hover {
     width: 90%;
     max-width: 90%;
   }
-  
+
   .picLeft > img,
   .picRight > img {
     float: none;
@@ -127,5 +126,5 @@ button:hover {
 }
 .trainersBottomImage {
   border-radius: 50%;
-  height: 100%; 
+  height: 100%;
 }
