futzing with image styling on trainers and guest trainers

--- a/src/components/Trainers.module.css
+++ b/src/components/Trainers.module.css
@@ -2,7 +2,7 @@
 @import '../styles/custom-properties.css';
 
 :root {
-  --read-more-height: 400px;
+  --read-more-height: 250px;
 }
 
 .picLeft,
@@ -12,7 +12,6 @@
   padding-bottom: 1.4rem;
   display: flex;
   align-items: flex-start;
-  flex-direction: row;
 }
 
 .picRight {
@@ -23,9 +22,8 @@
 }
 
 .pic {
-  width: 20rem;
-  height: auto;
-  min-height: 10px;
+  width: auto;
+  height: 275px;
   margin: 1.4rem;
   align-self: center;
   /* max-height: var(--read-more-height); */
@@ -58,36 +56,24 @@
   height: auto;
 }
 
-button {
+.button {
   color: #444444;
   background: #f3f3f3;
   border: 1px #dadada solid;
-  border-radius: 2px;
+  border-radius: 0.2rem;
   font-weight: bold;
-  font-size: 9pt;
+  font-size: medium;
   outline: none;
+  width: 8rem;
+  margin: 16px 1.4rem;
+  padding: 0.2rem 0;
 }
 
-button:hover {
+.button:hover {
   border: 1px #c6c6c6 solid;
   box-shadow: 1px 1px 1px #eaeaea;
   color: #333333;
   background: #f7f7f7;
-}
-.btnLeft {
-  width: 8rem;
-  margin: 16px 1.4rem;
-  border-radius: 0.2rem;
-  padding: 0.2rem 0;
-  font-size: medium;
-}
-
-.btnRight {
-  width: 8rem;
-  margin: 16px 1.4rem;
-  border-radius: 0.2rem;
-  padding: 0.2rem 0;
-  font-size: medium;
 }
 
 .displayYes {
