restyled contact page, final fix on trainer bios so that bios with fewer than 200 words don't have the see more button

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,5 +1,5 @@
-@import './styles/custom-properties.css';
-@import './styles/custom-media.css';
+@import '../styles/custom-properties.css';
+@import '../styles/custom-media.css';
 
 .root {
   color: var(--color-black, #333);
@@ -8,7 +8,6 @@
   padding: 2rem 0;
   text-align: center;
 }
-
 
 .text {
   text-align: center;
