--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,5 @@
-@import "./styles/custom-media.css";
-@import "./styles/custom-properties.css";
+@import '../styles/custom-media.css';
+@import '../styles/custom-properties.css';
 
 .Header {
   display: flex;
@@ -35,7 +35,7 @@
 .icon {
   color: var(--delightful-bright);
   font-size: x-large;
-  margin: 0.7em 1.5vw 0;;
+  margin: 0.7em 1.5vw 0;
 }
 .contactBtn:hover,
 .icon:hover {
@@ -93,7 +93,6 @@
 }
 #logoAlt {
   display: none;
-
 }
 
 #textHolder {
@@ -103,7 +102,6 @@
   max-width: 80%;
   box-sizing: border-box;
 }
-
 
 @media screen and (max-width: 899px) {
   /* LARGE */
@@ -151,7 +149,4 @@
     padding: 0 10%;
     align-self: center;
   }
-
 }
-
-
