--- a/src/pages/Landing.module.css
+++ b/src/pages/Landing.module.css
@@ -1,6 +1,6 @@
-@import "../styles/custom-media.css";
-@import "../styles/custom-properties.css";
-@import url("https://fonts.googleapis.com/css?family=Courgette&display=swap");
+@import '../styles/custom-media.css';
+@import '../styles/custom-properties.css';
+@import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
 
 .Landing {
   /* background-image: url('../assets/blueEyedAussie.jpg'); */
@@ -16,7 +16,6 @@
   justify-content: space-between;
 }
 .img {
-
   display: none;
 }
 
@@ -63,8 +62,8 @@
 .button:hover {
   background-color: var(--color-gray);
   color: var(--color-white);
+  text-decoration: none;
 }
-
 
 @media screen and (max-width: 899px) {
   .h1 {
@@ -92,7 +91,6 @@
   .heroContainer {
     width: 100%;
     border-radius: 0;
-
   }
   .h1 {
     font-size: var(--font-large-size);
